--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
-.gameSquare {
+.game-square-text {
+  opacity: 1;
+}
+
+.game-square {
   height: 100px;
   width: 100px;
   border: 1px black solid;
@@ -10,16 +14,16 @@
   align-items: center;
 }
 
-.gameRow {
+.game-row {
   display: flex;
   flex-direction: row;
 }
 
-.gameBoard {
+.game-board {
   border: 1px black solid;
 }
 
-.gameArea {
+.game-area {
   display: flex;
   flex-direction: column;
   justify-items: center;
@@ -29,12 +33,16 @@
   border: 1px black dashed;
 }
 
-.historyArea {
+.history-area {
   border: 1px black dashed;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 1rem;
 }
 
-.appLayout {
+.app-layout {
   display: flex;
   flex-direction: column;
   gap: 1rem;
